# foxyselabs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  foxyse.pen  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  prd.md  tailwind.config.js
.opencode/skills/: cron  officecli  skill-creator
app/: globals.css  layout.jsx  page.jsx
app/dashboard/: layout.jsx  page.jsx
app/login/: page.jsx
app/signup/: page.jsx
apps/agent/: Dockerfile  README.md  claude-settings.json  package.json  pyproject.toml  sandbox.Dockerfile
apps/agent/src/: __init__.py  claudecode.py  config.py  main.py  sandbox.py  workspace.py
apps/agent/src/api/: chat.py  health.py  workspace.py
apps/agent/src/graph/: agent.py  state.py
apps/agent/src/llm/: litellm_client.py
apps/gateway/: Dockerfile  README.md  go.mod  go.sum  package.json
apps/web/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
components/: CTA.jsx  CaraKerja.jsx  ComingSoon.jsx  Footer.jsx  Hero.jsx  KenapaPilihKami.jsx  Logo.jsx  Navbar.jsx  PilihanTemplate.jsx  Reveal.jsx  UntukSiapa.jsx
lib/: auth.js
prisma/: schema.prisma
server/: index.js  prisma.js  scanner.js  seed.js
server/routes/: history.js  networks.js  opportunities.js  settings.js  simulate.js
src/: App.jsx  index.css  main.jsx
src/components/: AuthGuard.jsx  HeroVisual.jsx  Icons.jsx  Logo.jsx  NavBar.jsx
src/contexts/: AuthContext.jsx
src/layouts/: MainLayout.jsx
src/pages/: Auth.jsx  Chat.jsx  (+2 more)
themes/: index.js
(+84 files in other folders)
